ffi/pigpio.h

typedef struct
{
   uint32_t tick;
   uint32_t level;
} gpioSample_t;
typedef void (*gpioTimerFunc_t)    (void);
typedef void (*gpioTimerFuncEx_t)  (void *userdata);
typedef void (*gpioSignalFunc_t)   (int signum);
typedef void (*gpioSignalFuncEx_t) (int    signum,
                                    void  *userdata);
typedef void (*gpioGetSamplesFunc_t)   (const gpioSample_t *samples,
                                        int                 numSamples);
typedef void (*gpioGetSamplesFuncEx_t) (const gpioSample_t *samples,
                                        int                 numSamples,
                                        void               *userdata);
typedef void *(gpioThreadFunc_t) (void *);
int serClose(unsigned handle);
int serWriteByte(unsigned handle, unsigned bVal);
int serReadByte(unsigned handle);
int serWrite(unsigned handle, char *buf, unsigned count);
int serRead(unsigned handle, char *buf, unsigned count);
int serDataAvailable(unsigned handle);
int gpioTrigger(unsigned user_gpio, unsigned pulseLen, unsigned level);
int gpioSetWatchdog(unsigned user_gpio, unsigned timeout);
int gpioNoiseFilter(unsigned user_gpio, unsigned steady, unsigned active);
int gpioGlitchFilter(unsigned user_gpio, unsigned steady);
int gpioSetGetSamplesFunc(gpioGetSamplesFunc_t f, uint32_t bits);
int gpioSetGetSamplesFuncEx(
   gpioGetSamplesFuncEx_t f, uint32_t bits, void *userdata);
int gpioSetTimerFunc(unsigned timer, unsigned millis, gpioTimerFunc_t f);
int gpioSetTimerFuncEx(
   unsigned timer, unsigned millis, gpioTimerFuncEx_t f, void *userdata);
pthread_t *gpioStartThread(gpioThreadFunc_t f, void *userdata);
void gpioStopThread(pthread_t *pth);
int gpioStoreScript(char *script);
int gpioRunScript(unsigned script_id, unsigned numPar, uint32_t *param);
int gpioRunScript(unsigned script_id, unsigned numPar, uint32_t *param);
int gpioUpdateScript(unsigned script_id, unsigned numPar, uint32_t *param);
int gpioScriptStatus(unsigned script_id, uint32_t *param);
int gpioStopScript(unsigned script_id);
int gpioDeleteScript(unsigned script_id);
int gpioSetSignalFunc(unsigned signum, gpioSignalFunc_t f);
int gpioSetSignalFuncEx(
   unsigned signum, gpioSignalFuncEx_t f, void *userdata);
uint32_t gpioRead_Bits_0_31(void);
uint32_t gpioRead_Bits_32_53(void);
int gpioWrite_Bits_0_31_Clear(uint32_t bits);
int gpioWrite_Bits_32_53_Clear(uint32_t bits);
int gpioWrite_Bits_0_31_Set(uint32_t bits);
int gpioWrite_Bits_32_53_Set(uint32_t bits);
int gpioHardwareClock(unsigned gpio, unsigned clkfreq);
int gpioHardwarePWM(unsigned gpio, unsigned PWMfreq, unsigned PWMduty);
int gpioTime(unsigned timetype, int *seconds, int *micros);
int gpioSleep(unsigned timetype, int seconds, int micros);
uint32_t gpioDelay(uint32_t micros);
uint32_t gpioTick(void);
unsigned gpioHardwareRevision(void);
unsigned gpioVersion(void);
int gpioGetPad(unsigned pad);