lib/src/bindings.dart


  int serClose(
    int handle,
  ) {
    _serClose ??=
        _dylib.lookupFunction<_c_serClose, _dart_serClose>('serClose');
    return _serClose(
      handle,
    );
  }

  _dart_serClose _serClose;

  int serWriteByte(
    int handle,
    int bVal,
  ) {
    _serWriteByte ??= _dylib
        .lookupFunction<_c_serWriteByte, _dart_serWriteByte>('serWriteByte');
    return _serWriteByte(
      handle,
      bVal,
    );
  }

  _dart_serWriteByte _serWriteByte;

  int serReadByte(
    int handle,
  ) {
    _serReadByte ??=
        _dylib.lookupFunction<_c_serReadByte, _dart_serReadByte>('serReadByte');
    return _serReadByte(
      handle,
    );
  }

  _dart_serReadByte _serReadByte;

  int serWrite(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _serWrite ??=
        _dylib.lookupFunction<_c_serWrite, _dart_serWrite>('serWrite');
    return _serWrite(
      handle,
      buf,
      count,
    );
  }

  _dart_serWrite _serWrite;

  int serRead(
    int handle,
    ffi.Pointer<ffi.Int8> buf,
    int count,
  ) {
    _serRead ??= _dylib.lookupFunction<_c_serRead, _dart_serRead>('serRead');
    return _serRead(
      handle,
      buf,
      count,
    );
  }

  _dart_serRead _serRead;

  int serDataAvailable(
    int handle,
  ) {
    _serDataAvailable ??=
        _dylib.lookupFunction<_c_serDataAvailable, _dart_serDataAvailable>(
            'serDataAvailable');
    return _serDataAvailable(
      handle,
    );
  }

  _dart_serDataAvailable _serDataAvailable;

  int gpioTrigger(
    int user_gpio,
    int pulseLen,
    int level,
  ) {
    _gpioTrigger ??=
        _dylib.lookupFunction<_c_gpioTrigger, _dart_gpioTrigger>('gpioTrigger');
    return _gpioTrigger(
      user_gpio,
      pulseLen,
      level,
    );
  }

  _dart_gpioTrigger _gpioTrigger;

  int gpioSetWatchdog(
    int user_gpio,
    int timeout,
  ) {
    _gpioSetWatchdog ??=
        _dylib.lookupFunction<_c_gpioSetWatchdog, _dart_gpioSetWatchdog>(
            'gpioSetWatchdog');
    return _gpioSetWatchdog(
      user_gpio,
      timeout,
    );
  }

  _dart_gpioSetWatchdog _gpioSetWatchdog;

  int gpioNoiseFilter(
    int user_gpio,
    int steady,
    int active,
  ) {
    _gpioNoiseFilter ??=
        _dylib.lookupFunction<_c_gpioNoiseFilter, _dart_gpioNoiseFilter>(
            'gpioNoiseFilter');
    return _gpioNoiseFilter(
      user_gpio,
      steady,
      active,
    );
  }

  _dart_gpioNoiseFilter _gpioNoiseFilter;

  int gpioGlitchFilter(
    int user_gpio,
    int steady,
  ) {
    _gpioGlitchFilter ??=
        _dylib.lookupFunction<_c_gpioGlitchFilter, _dart_gpioGlitchFilter>(
            'gpioGlitchFilter');
    return _gpioGlitchFilter(
      user_gpio,
      steady,
    );
  }

  _dart_gpioGlitchFilter _gpioGlitchFilter;

  int gpioSetGetSamplesFunc(
    ffi.Pointer<ffi.NativeFunction<gpioGetSamplesFunc_t>> f,
    int bits,
  ) {
    _gpioSetGetSamplesFunc ??= _dylib.lookupFunction<_c_gpioSetGetSamplesFunc,
        _dart_gpioSetGetSamplesFunc>('gpioSetGetSamplesFunc');
    return _gpioSetGetSamplesFunc(
      f,
      bits,
    );
  }

  _dart_gpioSetGetSamplesFunc _gpioSetGetSamplesFunc;

  int gpioSetGetSamplesFuncEx(
    ffi.Pointer<ffi.NativeFunction<gpioGetSamplesFuncEx_t>> f,
    int bits,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetGetSamplesFuncEx ??= _dylib.lookupFunction<
        _c_gpioSetGetSamplesFuncEx,
        _dart_gpioSetGetSamplesFuncEx>('gpioSetGetSamplesFuncEx');
    return _gpioSetGetSamplesFuncEx(
      f,
      bits,
      userdata,
    );
  }

  _dart_gpioSetGetSamplesFuncEx _gpioSetGetSamplesFuncEx;

  int gpioSetTimerFunc(
    int timer,
    int millis,
    ffi.Pointer<ffi.NativeFunction<gpioTimerFunc_t>> f,
  ) {
    _gpioSetTimerFunc ??=
        _dylib.lookupFunction<_c_gpioSetTimerFunc, _dart_gpioSetTimerFunc>(
            'gpioSetTimerFunc');
    return _gpioSetTimerFunc(
      timer,
      millis,
      f,
    );
  }

  _dart_gpioSetTimerFunc _gpioSetTimerFunc;

  int gpioSetTimerFuncEx(
    int timer,
    int millis,
    ffi.Pointer<ffi.NativeFunction<gpioTimerFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetTimerFuncEx ??=
        _dylib.lookupFunction<_c_gpioSetTimerFuncEx, _dart_gpioSetTimerFuncEx>(
            'gpioSetTimerFuncEx');
    return _gpioSetTimerFuncEx(
      timer,
      millis,
      f,
      userdata,
    );
  }

  _dart_gpioSetTimerFuncEx _gpioSetTimerFuncEx;

  ffi.Pointer<ffi.Pointer<_opaque_pthread_t>> gpioStartThread(
    ffi.Pointer<ffi.NativeFunction<gpioThreadFunc_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioStartThread ??=
        _dylib.lookupFunction<_c_gpioStartThread, _dart_gpioStartThread>(
            'gpioStartThread');
    return _gpioStartThread(
      f,
      userdata,
    );
  }

  _dart_gpioStartThread _gpioStartThread;

  void gpioStopThread(
    ffi.Pointer<ffi.Pointer<_opaque_pthread_t>> pth,
  ) {
    _gpioStopThread ??=
        _dylib.lookupFunction<_c_gpioStopThread, _dart_gpioStopThread>(
            'gpioStopThread');
    return _gpioStopThread(
      pth,
    );
  }

  _dart_gpioStopThread _gpioStopThread;

  int gpioStoreScript(
    ffi.Pointer<ffi.Int8> script,
  ) {
    _gpioStoreScript ??=
        _dylib.lookupFunction<_c_gpioStoreScript, _dart_gpioStoreScript>(
            'gpioStoreScript');
    return _gpioStoreScript(
      script,
    );
  }

  _dart_gpioStoreScript _gpioStoreScript;

  int gpioRunScript(
    int script_id,
    int numPar,
    ffi.Pointer<ffi.Uint32> param,
  ) {
    _gpioRunScript ??= _dylib
        .lookupFunction<_c_gpioRunScript, _dart_gpioRunScript>('gpioRunScript');
    return _gpioRunScript(
      script_id,
      numPar,
      param,
    );
  }

  _dart_gpioRunScript _gpioRunScript;

  int gpioUpdateScript(
    int script_id,
    int numPar,
    ffi.Pointer<ffi.Uint32> param,
  ) {
    _gpioUpdateScript ??=
        _dylib.lookupFunction<_c_gpioUpdateScript, _dart_gpioUpdateScript>(
            'gpioUpdateScript');
    return _gpioUpdateScript(
      script_id,
      numPar,
      param,
    );
  }

  _dart_gpioUpdateScript _gpioUpdateScript;

  int gpioScriptStatus(
    int script_id,
    ffi.Pointer<ffi.Uint32> param,
  ) {
    _gpioScriptStatus ??=
        _dylib.lookupFunction<_c_gpioScriptStatus, _dart_gpioScriptStatus>(
            'gpioScriptStatus');
    return _gpioScriptStatus(
      script_id,
      param,
    );
  }

  _dart_gpioScriptStatus _gpioScriptStatus;

  int gpioStopScript(
    int script_id,
  ) {
    _gpioStopScript ??=
        _dylib.lookupFunction<_c_gpioStopScript, _dart_gpioStopScript>(
            'gpioStopScript');
    return _gpioStopScript(
      script_id,
    );
  }

  _dart_gpioStopScript _gpioStopScript;

  int gpioDeleteScript(
    int script_id,
  ) {
    _gpioDeleteScript ??=
        _dylib.lookupFunction<_c_gpioDeleteScript, _dart_gpioDeleteScript>(
            'gpioDeleteScript');
    return _gpioDeleteScript(
      script_id,
    );
  }

  _dart_gpioDeleteScript _gpioDeleteScript;

  int gpioSetSignalFunc(
    int signum,
    ffi.Pointer<ffi.NativeFunction<gpioSignalFunc_t>> f,
  ) {
    _gpioSetSignalFunc ??=
        _dylib.lookupFunction<_c_gpioSetSignalFunc, _dart_gpioSetSignalFunc>(
            'gpioSetSignalFunc');
    return _gpioSetSignalFunc(
      signum,
      f,
    );
  }

  _dart_gpioSetSignalFunc _gpioSetSignalFunc;

  int gpioSetSignalFuncEx(
    int signum,
    ffi.Pointer<ffi.NativeFunction<gpioSignalFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetSignalFuncEx ??= _dylib.lookupFunction<_c_gpioSetSignalFuncEx,
        _dart_gpioSetSignalFuncEx>('gpioSetSignalFuncEx');
    return _gpioSetSignalFuncEx(
      signum,
      f,
      userdata,
    );
  }

  _dart_gpioSetSignalFuncEx _gpioSetSignalFuncEx;

  int gpioRead_Bits_0_31() {
    _gpioRead_Bits_0_31 ??=
        _dylib.lookupFunction<_c_gpioRead_Bits_0_31, _dart_gpioRead_Bits_0_31>(
            'gpioRead_Bits_0_31');
    return _gpioRead_Bits_0_31();
  }

  _dart_gpioRead_Bits_0_31 _gpioRead_Bits_0_31;

  int gpioRead_Bits_32_53() {
    _gpioRead_Bits_32_53 ??= _dylib.lookupFunction<_c_gpioRead_Bits_32_53,
        _dart_gpioRead_Bits_32_53>('gpioRead_Bits_32_53');
    return _gpioRead_Bits_32_53();
  }

  _dart_gpioRead_Bits_32_53 _gpioRead_Bits_32_53;

  int gpioWrite_Bits_0_31_Clear(
    int bits,
  ) {
    _gpioWrite_Bits_0_31_Clear ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_0_31_Clear,
        _dart_gpioWrite_Bits_0_31_Clear>('gpioWrite_Bits_0_31_Clear');
    return _gpioWrite_Bits_0_31_Clear(
      bits,
    );
  }

  _dart_gpioWrite_Bits_0_31_Clear _gpioWrite_Bits_0_31_Clear;

  int gpioWrite_Bits_32_53_Clear(
    int bits,
  ) {
    _gpioWrite_Bits_32_53_Clear ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_32_53_Clear,
        _dart_gpioWrite_Bits_32_53_Clear>('gpioWrite_Bits_32_53_Clear');
    return _gpioWrite_Bits_32_53_Clear(
      bits,
    );
  }

  _dart_gpioWrite_Bits_32_53_Clear _gpioWrite_Bits_32_53_Clear;

  int gpioWrite_Bits_0_31_Set(
    int bits,
  ) {
    _gpioWrite_Bits_0_31_Set ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_0_31_Set,
        _dart_gpioWrite_Bits_0_31_Set>('gpioWrite_Bits_0_31_Set');
    return _gpioWrite_Bits_0_31_Set(
      bits,
    );
  }

  _dart_gpioWrite_Bits_0_31_Set _gpioWrite_Bits_0_31_Set;

  int gpioWrite_Bits_32_53_Set(
    int bits,
  ) {
    _gpioWrite_Bits_32_53_Set ??= _dylib.lookupFunction<
        _c_gpioWrite_Bits_32_53_Set,
        _dart_gpioWrite_Bits_32_53_Set>('gpioWrite_Bits_32_53_Set');
    return _gpioWrite_Bits_32_53_Set(
      bits,
    );
  }

  _dart_gpioWrite_Bits_32_53_Set _gpioWrite_Bits_32_53_Set;

  int gpioHardwareClock(
    int gpio,
    int clkfreq,
  ) {
    _gpioHardwareClock ??=
        _dylib.lookupFunction<_c_gpioHardwareClock, _dart_gpioHardwareClock>(
            'gpioHardwareClock');
    return _gpioHardwareClock(
      gpio,
      clkfreq,
    );
  }

  _dart_gpioHardwareClock _gpioHardwareClock;

  int gpioHardwarePWM(
    int gpio,
    int PWMfreq,
    int PWMduty,
  ) {
    _gpioHardwarePWM ??=
        _dylib.lookupFunction<_c_gpioHardwarePWM, _dart_gpioHardwarePWM>(
            'gpioHardwarePWM');
    return _gpioHardwarePWM(
      gpio,
      PWMfreq,
      PWMduty,
    );
  }

  _dart_gpioHardwarePWM _gpioHardwarePWM;

  int gpioTime(
    int timetype,
    ffi.Pointer<ffi.Int32> seconds,
    ffi.Pointer<ffi.Int32> micros,
  ) {
    _gpioTime ??=
        _dylib.lookupFunction<_c_gpioTime, _dart_gpioTime>('gpioTime');
    return _gpioTime(
      timetype,
      seconds,
      micros,
    );
  }

  _dart_gpioTime _gpioTime;

  int gpioSleep(
    int timetype,
    int seconds,
    int micros,
  ) {
    _gpioSleep ??=
        _dylib.lookupFunction<_c_gpioSleep, _dart_gpioSleep>('gpioSleep');
    return _gpioSleep(
      timetype,
      seconds,
      micros,
    );
  }

  _dart_gpioSleep _gpioSleep;

  int gpioDelay(
    int micros,
  ) {
    _gpioDelay ??=
        _dylib.lookupFunction<_c_gpioDelay, _dart_gpioDelay>('gpioDelay');
    return _gpioDelay(
      micros,
    );
  }

  _dart_gpioDelay _gpioDelay;

  int gpioTick() {
    _gpioTick ??=
        _dylib.lookupFunction<_c_gpioTick, _dart_gpioTick>('gpioTick');
    return _gpioTick();
  }

  _dart_gpioTick _gpioTick;

  int gpioHardwareRevision() {
    _gpioHardwareRevision ??= _dylib.lookupFunction<_c_gpioHardwareRevision,
        _dart_gpioHardwareRevision>('gpioHardwareRevision');
    return _gpioHardwareRevision();
  }

  _dart_gpioHardwareRevision _gpioHardwareRevision;

  int gpioVersion() {
    _gpioVersion ??=
        _dylib.lookupFunction<_c_gpioVersion, _dart_gpioVersion>('gpioVersion');
    return _gpioVersion();
  }

  _dart_gpioVersion _gpioVersion;

  int gpioGetPad(
    int pad,
  ) {
    _gpioGetPad ??=
        _dylib.lookupFunction<_c_gpioGetPad, _dart_gpioGetPad>('gpioGetPad');
    return _gpioGetPad(
      pad,
    );
  }

  _dart_gpioGetPad _gpioGetPad;
